--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,14 +7,8 @@
     tools:context=".SignUpActivity"
     android:background="@color/white"
     android:orientation="vertical"
-    android:scrollbars="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp">
 
     <ImageView
         android:paddingTop="20dp"
@@ -31,24 +25,33 @@
         android:textColor="@color/black"
         android:textSize="16sp" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/nameField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Widget.Design.TextInputLayout"
-        android:hint="Name"
-        android:layout_marginTop="20dp">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColorHint="@color/black"
-            android:textColor="@color/black"
-            android:drawableRight="@drawable/img_3"
-            android:textSize="16sp"/>
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
+            android:layout_marginTop="10dp">
 
+            <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/nameField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
+            android:hint="Name">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                android:drawableRight="@drawable/text_icon"
+                android:background="@color/white"
+                android:textSize="16sp"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:layout_width="match_parent"
@@ -57,24 +60,32 @@
         android:textSize="10sp"
         android:textColor="@color/mustard"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/userNameField"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Widget.Design.TextInputLayout"
-        android:hint="Login Name"
-        android:layout_marginTop="20dp">
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        android:layout_marginTop="10dp">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/userNameField"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColorHint="@color/black"
-            android:textColor="@color/black"
-            android:drawableRight="@drawable/img_3"
-            android:textSize="16sp"/>
+            android:layout_height="wrap_content"
+            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
+            android:hint="Login Name">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                android:drawableRight="@drawable/text_icon"
+                android:background="@color/white"
+                android:textSize="16sp"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
+    </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:layout_width="match_parent"
@@ -84,24 +95,32 @@
         android:textColor="@color/mustard"/>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/pinField"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Widget.Design.TextInputLayout"
-        android:hint="ATM PIN"
-        android:layout_marginTop="20dp">
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        android:layout_marginTop="10dp">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/pinField"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColorHint="@color/black"
-            android:textColor="@color/black"
-            android:drawableRight="@drawable/img_3"
-            android:textSize="16sp"/>
+            android:layout_height="wrap_content"
+            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
+            android:hint="ATM PIN">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                android:drawableRight="@drawable/text_icon"
+                android:background="@color/white"
+                android:textSize="16sp"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
+    </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:layout_width="match_parent"
@@ -111,51 +130,33 @@
         android:textColor="@color/mustard"/>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/cnicField"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Widget.Design.TextInputLayout"
-        android:hint="CNIC"
-        android:layout_marginTop="20dp">
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        android:layout_marginTop="10dp">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/accNo"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColorHint="@color/black"
-            android:textColor="@color/black"
-            android:drawableRight="@drawable/img_3"
-            android:textSize="16sp"/>
+            android:layout_height="wrap_content"
+            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
+            android:hint="Account Number">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                android:drawableRight="@drawable/text_icon"
+                android:background="@color/white"
+                android:textSize="16sp"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </androidx.cardview.widget.CardView>
 
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enter CNIC"
-        android:textSize="10sp"
-        android:textColor="@color/mustard"/>
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/accNo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Widget.Design.TextInputLayout"
-        android:hint="Account Number"
-        android:layout_marginTop="20dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColorHint="@color/black"
-            android:textColor="@color/black"
-            android:drawableRight="@drawable/img_3"
-            android:textSize="16sp"/>
-
-
-    </com.google.android.material.textfield.TextInputLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -164,24 +165,33 @@
         android:textColor="@color/mustard" />
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passField"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Widget.Design.TextInputLayout"
-        android:hint="Password"
-        android:layout_marginTop="20dp">
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        android:layout_marginTop="10dp">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passField"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColorHint="@color/black"
-            android:textColor="@color/black"
-            android:drawableRight="@drawable/img_3"
-            android:textSize="16sp"/>
+            android:layout_height="wrap_content"
+            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
+            android:hint="Password">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                android:drawableRight="@drawable/text_icon"
+                android:background="@color/white"
+                android:textSize="16sp"
+                android:inputType="textPassword"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
+    </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:layout_width="match_parent"
@@ -190,6 +200,7 @@
         android:textSize="10sp"
         android:textColor="@color/mustard"/>
 
+        <!--elevation=0dp-->
     <Button
         android:id="@+id/register"
         android:layout_width="wrap_content"
@@ -198,8 +209,7 @@
         android:textSize="10sp"
         android:layout_marginTop="20dp"
         android:textColor="@color/white"
-        android:background="#EE0000"
+        android:backgroundTint="@color/blue"
         android:layout_gravity="center"/>
 
     </LinearLayout>
-</ScrollView>
