main screen donee

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,17 +4,16 @@
 
     <item android:title="home"
         android:id="@+id/home"
-        android:icon="@drawable/baseline_home_24"
-        app:showAsAction="ifRoom|withText"/>
+        android:icon="@drawable/baseline_home_24"/>
 
-    <item android:title="call"
+    <item android:title="FAQs"
         android:id="@+id/call"
         android:icon="@drawable/baseline_call_24"
-        app:showAsAction="ifRoom|withText"/>
+       />
 
     <item android:title="location"
         android:id="@+id/location"
         android:icon="@drawable/baseline_add_location_24"
-        app:showAsAction="ifRoom|withText"/>
+       />
 
 </menu>
