--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,235 +13,267 @@
             android:padding="20dp"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:background="@color/mainPurple">
+            android:background="@color/mainBlue">
 
             <ImageView
-                android:id="@+id/profile"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_centerVertical="true"
-                android:src="@drawable/profilee" />
+                android:id="@+id/logo"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentLeft="true"
+                android:src="@drawable/logo" />
+
+            <TextView
+                android:id="@+id/payNow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/logo"
+                android:layout_marginLeft="10dp"
+                android:text="PAYNOW"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_toEndOf="@id/profile"
+                android:layout_below="@id/payNow"
                 android:layout_centerVertical="true"
-                android:text="Sarwat Aijaz"
-                android:textAllCaps="true"
-                android:textSize="24sp"
-                android:textColor="@color/lightgrey"
+                android:layout_marginTop="50dp"
+                android:fontFamily="@font/alike_angular"
+                android:text="Hi, Sarwat!"
+                android:textColor="@color/white"
+                android:textSize="32sp"
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/balance_head"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="sarwat_aijaz"
                 android:layout_below="@id/name"
-                android:layout_toEndOf="@id/profile"
+                android:fontFamily="@font/alike_angular"
+                android:layout_marginTop="10dp"
+                android:text="Here's Your Balance"
+                android:textColor="@color/white"
+                android:textSize="32sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/savings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SAVINGS"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/balance_head"
+                android:textSize="14sp"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/rs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rs."
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/savings"
+                android:includeFontPadding="false"
+                android:textSize="14sp"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="15,600"
+                android:layout_marginTop="10dp"
+                android:layout_toEndOf="@id/rs"
+                android:layout_below="@id/savings"
+                android:layout_alignBaseline="@id/rs"
                 android:textSize="20sp"
-                android:textColor="@color/mustard"
-                android:layout_marginLeft="10dp"
-                android:textStyle="bold|italic"/>
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/accNoHead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ACCOUNT NO"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/balance_head"
+                android:layout_alignParentEnd="true"
+                android:textSize="14sp"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/accNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="41262343784123"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/accNoHead"
+                android:layout_alignParentEnd="true"
+                android:layout_alignBaseline="@id/amount"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
 
         </RelativeLayout>
 
-    <LinearLayout
-        android:layout_height="wrap_content"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:padding="20dp"
-        android:layout_marginTop="-100dp">
+        android:layout_height="match_parent"
+        app:cardCornerRadius="40dp"
+        app:cardBackgroundColor="@color/white"
+        android:layout_marginTop="-15dp">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="150dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            app:cardElevation="10dp"
-            app:cardCornerRadius="10dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="5dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="Activities"
+            android:textColor="@color/mainBlue"
+            android:textStyle="bold"
+            android:textSize="24sp"/>
 
-            <RelativeLayout
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="bottom">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                app:cardBackgroundColor="@color/white"
+                android:layout_weight="1"
+                android:layout_margin="10dp"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="20dp">
+
+                    <ImageView
+                        android:id="@+id/pay_img"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/baseline_attach_money_24"
+                        android:layout_centerHorizontal="true"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="20dp"
+                        android:text="Send Money"
+                        android:textColor="@color/mainBlue"
+                        android:layout_centerHorizontal="true"
+                        android:layout_below="@id/pay_img"
+                        android:textSize="14sp"
+                        android:textStyle="bold"/>
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                app:cardBackgroundColor="@color/white"
+                android:layout_weight="1"
+                android:layout_margin="10dp"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="20dp">
+
+                    <ImageView
+                        android:id="@+id/card_img"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/baseline_credit_card_24"
+                        android:layout_centerHorizontal="true"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="20dp"
+                        android:text="Debit Card"
+                        android:textColor="@color/mainBlue"
+                        android:layout_centerHorizontal="true"
+                        android:layout_below="@id/card_img"
+                        android:textSize="14sp"
+                        android:textStyle="bold"/>
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                app:cardBackgroundColor="@color/white"
+                android:layout_weight="1"
+                android:layout_margin="10dp"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="20dp">
+
+                    <ImageView
+                        android:id="@+id/setting_img"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/baseline_brightness_low_24"
+                        android:layout_centerHorizontal="true"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="20dp"
+                        android:text="Settings"
+                        android:textColor="@color/mainBlue"
+                        android:layout_centerHorizontal="true"
+                        android:layout_below="@id/setting_img"
+                        android:textSize="14sp"
+                        android:textStyle="bold"/>
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+        </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                android:padding="5dp">
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView" />
 
-                <TextView
-                    android:id="@+id/balanceHead"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:text="balance"
-                    android:textAllCaps="true"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
-
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_above="@+id/accountHead"
-                    android:layout_alignTop="@id/balanceAmount"
-                    android:layout_marginLeft="40dp"
-                    android:src="@drawable/dot" />
-
-                <TextView
-                    android:id="@+id/balanceAmount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/balanceHead"
-                    android:layout_centerHorizontal="true"
-                    android:text="Rs. 4,753"
-                    android:textColor="@color/mainPurple"
-                    android:textStyle="bold"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/accountHead"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_below="@id/balanceAmount"
-                    android:text="Account No"
-                    android:textAllCaps="true"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/accountNo"
-                    android:paddingTop="5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/accountHead"
-                    android:layout_centerInParent="true"
-                    android:text="17826373781231"
-                    android:textColor="@color/mainPurple"
-                    android:textStyle="bold"
-                    android:textSize="24sp" />
-
-            </RelativeLayout>
-
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:text="Activity"
-        android:textColor="@color/white"
-        android:textStyle="bold|italic"
-        android:textSize="24sp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            app:cardBackgroundColor="@color/lightgrey"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            app:cardElevation="10dp"
-            app:cardCornerRadius="10dp">
-
-            <RelativeLayout
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavigationView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp">
+                android:layout_height="wrap_content"
+                android:background="@color/mainBlue"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:menu="@menu/bottom_menu"/>
 
-                <ImageView
-                    android:id="@+id/pay_img"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/pay_img"
-                    android:layout_centerHorizontal="true"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Send Money"
-                    android:textColor="@color/white"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@id/pay_img"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
-
-            </RelativeLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            app:cardBackgroundColor="@color/lightgrey"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            app:cardElevation="10dp"
-            app:cardCornerRadius="10dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp">
-
-                <ImageView
-                    android:id="@+id/card_img"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/card_img"
-                    android:layout_centerHorizontal="true"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Debit Card"
-                    android:textColor="@color/white"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@id/card_img"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
-
-            </RelativeLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            app:cardBackgroundColor="@color/lightgrey"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            app:cardElevation="10dp"
-            app:cardCornerRadius="10dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp">
-
-                <ImageView
-                    android:id="@+id/setting_img"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/setting_img"
-                    android:layout_centerHorizontal="true"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Settings"
-                    android:textColor="@color/white"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@id/setting_img"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
-
-            </RelativeLayout>
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
 
