--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="mainPurple">#800080</color>
+    <color name="mainBlue">#282460</color>
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
     <color name="lightgrey">#D3D3D3</color>
