--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/black"
+    android:background="@color/white"
     android:orientation="vertical">
 
 
@@ -13,7 +13,7 @@
             android:padding="20dp"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:background="@color/mainBlue">
+            android:background="@color/white">
 
             <ImageView
                 android:id="@+id/logo"
@@ -22,14 +22,14 @@
                 android:layout_alignParentLeft="true"
                 android:src="@drawable/logo" />
 
-            <TextView
+            <ImageView
                 android:id="@+id/payNow"
+                android:src="@drawable/text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/logo"
                 android:layout_marginLeft="10dp"
-                android:text="PAYNOW"
-                android:textColor="@color/white"
+                android:textColor="@color/mainBlue"
                 android:textSize="16sp" />
 
             <TextView
@@ -41,7 +41,7 @@
                 android:layout_marginTop="50dp"
                 android:fontFamily="@font/alike_angular"
                 android:text="Hi, Sarwat!"
-                android:textColor="@color/white"
+                android:textColor="@color/mainBlue"
                 android:textSize="32sp"
                 android:textStyle="bold" />
 
@@ -53,7 +53,7 @@
                 android:fontFamily="@font/alike_angular"
                 android:layout_marginTop="10dp"
                 android:text="Here's Your Balance"
-                android:textColor="@color/white"
+                android:textColor="@color/mainBlue"
                 android:textSize="32sp"
                 android:textStyle="bold" />
 
@@ -121,7 +121,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="40dp"
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="@color/mainBlue"
         android:layout_marginTop="-15dp">
 
         <LinearLayout
