--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,123 +5,123 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/white"
+    android:background="@color/mainBlue"
     android:orientation="vertical">
 
 
-        <RelativeLayout
-            android:padding="20dp"
+    <RelativeLayout
+        android:padding="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:background="@color/mainBlue">
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/logo" />
+
+        <TextView
+            android:id="@+id/payNow"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:background="@color/white">
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/logo"
+            android:layout_marginLeft="10dp"
+            android:text="PAYNOW"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
-            <ImageView
-                android:id="@+id/logo"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_alignParentLeft="true"
-                android:src="@drawable/logo" />
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/payNow"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="50dp"
+            android:fontFamily="@font/alike_angular"
+            android:text="Hi, Sarwat!"
+            android:textColor="@color/white"
+            android:textSize="32sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/payNow"
-                android:src="@drawable/text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/logo"
-                android:layout_marginLeft="10dp"
-                android:textColor="@color/mainBlue"
-                android:textSize="16sp" />
+        <TextView
+            android:id="@+id/balance_head"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/name"
+            android:fontFamily="@font/alike_angular"
+            android:layout_marginTop="10dp"
+            android:text="Here's Your Balance"
+            android:textColor="@color/white"
+            android:textSize="32sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/payNow"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="50dp"
-                android:fontFamily="@font/alike_angular"
-                android:text="Hi, Sarwat!"
-                android:textColor="@color/mainBlue"
-                android:textSize="32sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/savings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SAVINGS"
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/balance_head"
+            android:textSize="14sp"
+            android:textColor="@color/white"/>
 
-            <TextView
-                android:id="@+id/balance_head"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/name"
-                android:fontFamily="@font/alike_angular"
-                android:layout_marginTop="10dp"
-                android:text="Here's Your Balance"
-                android:textColor="@color/mainBlue"
-                android:textSize="32sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/rs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rs."
+            android:layout_marginTop="10dp"
+            android:layout_below="@id/savings"
+            android:includeFontPadding="false"
+            android:textSize="14sp"
+            android:textColor="@color/white"/>
 
-            <TextView
-                android:id="@+id/savings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="SAVINGS"
-                android:layout_marginTop="20dp"
-                android:layout_below="@id/balance_head"
-                android:textSize="14sp"
-                android:textColor="@color/white"/>
+        <TextView
+            android:id="@+id/amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="15,600"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@id/rs"
+            android:layout_below="@id/savings"
+            android:layout_alignBaseline="@id/rs"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
 
-            <TextView
-                android:id="@+id/rs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Rs."
-                android:layout_marginTop="10dp"
-                android:layout_below="@id/savings"
-                android:includeFontPadding="false"
-                android:textSize="14sp"
-                android:textColor="@color/white"/>
+        <TextView
+            android:id="@+id/accNoHead"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ACCOUNT NO"
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/balance_head"
+            android:layout_alignParentEnd="true"
+            android:textSize="14sp"
+            android:textColor="@color/white"/>
 
-            <TextView
-                android:id="@+id/amount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="15,600"
-                android:layout_marginTop="10dp"
-                android:layout_toEndOf="@id/rs"
-                android:layout_below="@id/savings"
-                android:layout_alignBaseline="@id/rs"
-                android:textSize="20sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/accNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="41262343784123"
+            android:layout_marginTop="10dp"
+            android:layout_below="@id/accNoHead"
+            android:layout_alignParentEnd="true"
+            android:layout_alignBaseline="@id/amount"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
 
-            <TextView
-                android:id="@+id/accNoHead"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ACCOUNT NO"
-                android:layout_marginTop="20dp"
-                android:layout_below="@id/balance_head"
-                android:layout_alignParentEnd="true"
-                android:textSize="14sp"
-                android:textColor="@color/white"/>
-
-            <TextView
-                android:id="@+id/accNo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="41262343784123"
-                android:layout_marginTop="10dp"
-                android:layout_below="@id/accNoHead"
-                android:layout_alignParentEnd="true"
-                android:layout_alignBaseline="@id/amount"
-                android:textSize="20sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"/>
-
-        </RelativeLayout>
+    </RelativeLayout>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="40dp"
-        app:cardBackgroundColor="@color/mainBlue"
+        app:cardBackgroundColor="@color/white"
         android:layout_marginTop="-15dp">
 
         <LinearLayout
@@ -129,126 +129,126 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="5dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:text="Activities"
-            android:textColor="@color/mainBlue"
-            android:textStyle="bold"
-            android:textSize="24sp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:text="Activities"
+                android:textColor="@color/mainBlue"
+                android:textStyle="bold"
+                android:textSize="24sp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="bottom">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="bottom">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                app:cardBackgroundColor="@color/white"
-                android:layout_weight="1"
-                android:layout_margin="10dp"
-                app:cardElevation="10dp"
-                app:cardCornerRadius="10dp">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    app:cardBackgroundColor="@color/white"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    app:cardElevation="10dp"
+                    app:cardCornerRadius="10dp">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="20dp">
-
-                    <ImageView
-                        android:id="@+id/pay_img"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/baseline_attach_money_24"
-                        android:layout_centerHorizontal="true"/>
-
-                    <TextView
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="20dp"
-                        android:text="Send Money"
-                        android:textColor="@color/mainBlue"
-                        android:layout_centerHorizontal="true"
-                        android:layout_below="@id/pay_img"
-                        android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:layout_height="match_parent"
+                        android:layout_margin="20dp">
 
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
+                        <ImageView
+                            android:id="@+id/pay_img"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/baseline_attach_money_24"
+                            android:layout_centerHorizontal="true"/>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                app:cardBackgroundColor="@color/white"
-                android:layout_weight="1"
-                android:layout_margin="10dp"
-                app:cardElevation="10dp"
-                app:cardCornerRadius="10dp">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingTop="20dp"
+                            android:text="Send Money"
+                            android:textColor="@color/mainBlue"
+                            android:layout_centerHorizontal="true"
+                            android:layout_below="@id/pay_img"
+                            android:textSize="14sp"
+                            android:textStyle="bold"/>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="20dp">
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
 
-                    <ImageView
-                        android:id="@+id/card_img"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/baseline_credit_card_24"
-                        android:layout_centerHorizontal="true"/>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    app:cardBackgroundColor="@color/white"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    app:cardElevation="10dp"
+                    app:cardCornerRadius="10dp">
 
-                    <TextView
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="20dp"
-                        android:text="Debit Card"
-                        android:textColor="@color/mainBlue"
-                        android:layout_centerHorizontal="true"
-                        android:layout_below="@id/card_img"
-                        android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:layout_height="match_parent"
+                        android:layout_margin="20dp">
 
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
+                        <ImageView
+                            android:id="@+id/card_img"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/baseline_credit_card_24"
+                            android:layout_centerHorizontal="true"/>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                app:cardBackgroundColor="@color/white"
-                android:layout_weight="1"
-                android:layout_margin="10dp"
-                app:cardElevation="10dp"
-                app:cardCornerRadius="10dp">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingTop="20dp"
+                            android:text="Debit Card"
+                            android:textColor="@color/mainBlue"
+                            android:layout_centerHorizontal="true"
+                            android:layout_below="@id/card_img"
+                            android:textSize="14sp"
+                            android:textStyle="bold"/>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="20dp">
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
 
-                    <ImageView
-                        android:id="@+id/setting_img"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/baseline_brightness_low_24"
-                        android:layout_centerHorizontal="true"/>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    app:cardBackgroundColor="@color/white"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    app:cardElevation="10dp"
+                    app:cardCornerRadius="10dp">
 
-                    <TextView
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="20dp"
-                        android:text="Settings"
-                        android:textColor="@color/mainBlue"
-                        android:layout_centerHorizontal="true"
-                        android:layout_below="@id/setting_img"
-                        android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:layout_height="match_parent"
+                        android:layout_margin="20dp">
 
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
+                        <ImageView
+                            android:id="@+id/setting_img"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/baseline_brightness_low_24"
+                            android:layout_centerHorizontal="true"/>
 
-        </LinearLayout>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingTop="20dp"
+                            android:text="Settings"
+                            android:textColor="@color/mainBlue"
+                            android:layout_centerHorizontal="true"
+                            android:layout_below="@id/setting_img"
+                            android:textSize="14sp"
+                            android:textStyle="bold"/>
+
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
 
         </LinearLayout>
 
