ui for send money completed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,6 +171,7 @@
                             android:layout_height="wrap_content"
                             android:paddingTop="20dp"
                             android:text="Send Money"
+                            android:gravity="center_horizontal"
                             android:textColor="@color/mainBlue"
                             android:layout_centerHorizontal="true"
                             android:layout_below="@id/pay_img"
@@ -208,6 +209,7 @@
                             android:layout_height="wrap_content"
                             android:paddingTop="20dp"
                             android:text="Debit Card"
+                            android:gravity="center_horizontal"
                             android:textColor="@color/mainBlue"
                             android:layout_centerHorizontal="true"
                             android:layout_below="@id/card_img"
@@ -245,6 +247,7 @@
                             android:layout_height="wrap_content"
                             android:paddingTop="20dp"
                             android:text="Settings"
+                            android:gravity="center_horizontal"
                             android:textColor="@color/mainBlue"
                             android:layout_centerHorizontal="true"
                             android:layout_below="@id/setting_img"
