--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -39,7 +39,7 @@
         android:text="From Account"
         android:paddingLeft="20dp"
         android:fontFamily="@font/poppins"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="@color/mainRed"
         android:textStyle="bold"
         android:layout_marginTop="35dp"/>
@@ -78,7 +78,7 @@
                 android:text="SARWAT AIJAZ"
                 android:textAllCaps="true"
                 android:fontFamily="@font/poppins"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:layout_centerVertical="true"
                 android:paddingLeft="20dp"
                 android:textColor="@color/mainBlue"
