--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/abril_fatface</item>
         <item>@font/acme</item>
+        <item>@font/baloo_bhaijaan</item>
         <item>@font/poppins</item>
         <item>@font/poppins_thin</item>
     </array>
