handle illegal state exception and money updation

--- a/app/src/main/res/layout/dialog_congrats.xml
+++ b/app/src/main/res/layout/dialog_congrats.xml
@@ -14,6 +14,7 @@
         style="?android:attr/progressBarStyleHorizontal" />
 
     <TextView
+        android:id="@+id/congosText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/baloo_bhaijaan"
