all DONEE just code cleanup

--- a/app/src/main/res/layout/dialog_congrats.xml
+++ b/app/src/main/res/layout/dialog_congrats.xml
@@ -1,39 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="50dp"
+    android:padding="5dp"
     android:gravity="center">
 
-    <ImageView
-        android:id="@+id/load"
-        android:src="@drawable/cup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        style="?android:attr/progressBarStyleHorizontal" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
+            <ImageView
+                android:id="@+id/load"
+                android:src="@drawable/cup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                style="?android:attr/progressBarStyleHorizontal" />
 
-    <TextView
-        android:id="@+id/congosText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/baloo_bhaijaan"
-        android:gravity="center"
-        android:text="You just recieved Rs 200 from"
-        android:textColor="#FA6C46"
-        android:textSize="30sp" />
+            <TextView
+                android:id="@+id/congosText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/baloo_bhaijaan"
+                android:gravity="center"
+                android:text="You just recieved Rs 200 from"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:textColor="#FA6C46"
+                android:textSize="26sp" />
 
-    <Button
-        android:id="@+id/dismiss"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="#FAC046"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:text="Dismiss"/>
+            <Button
+                android:id="@+id/dismiss"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="#FAC046"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:layout_marginBottom="20dp"
+                android:text="Dismiss"/>
+        </LinearLayout>
 
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 
