--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,11 +9,29 @@
     android:padding="20dp"
     tools:context=".LoginActivity">
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/text"
-        android:transitionName="logo_text"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/text"
+            android:transitionName="logo_text"/>
+
+        <Button
+            android:id="@+id/registered"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="40dp"
+            android:backgroundTint="@color/white"
+            android:text="Registered Accounts"
+            android:textColor="#EE0000"
+            android:textSize="10sp"
+            android:visibility="invisible"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -55,6 +73,7 @@
             android:layout_height="match_parent"
             android:textColor="@color/black"
             android:textSize="16sp"
+            android:singleLine="true"
             android:background="@color/white"/>
 
 
@@ -75,7 +94,8 @@
                 android:inputType="textPassword"
                 android:textSize="16sp"
                 android:textColor="@color/black"
-                android:background="@color/white"/>
+                android:background="@color/white"
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
